feat: should be finished
Took 4 hours 59 minutes